# RyzenAdj

./: CMakeLists.txt
lib/: README.md  osdep.h  osdep_linux.c  osdep_linux_mem.h  osdep_linux_smu_kernel_module.h  osdep_win32.cpp  ryzen_opts.c  ryzen_opts.h  ryzenadj.c  ryzenadj.h  smu_access.c  smu_access.h
lib/linux/: osdep_linux.c  osdep_linux_mem.c  osdep_linux_mem.h  osdep_linux_smu_kernel_module.h
lib/win32/: osdep_win32.cpp
